2023-12-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (biblatex.4ht): declare the \BibFileName in the aux
	file, to prevent compilation errors in the subsequent compilations
	with LaTEX.

	* tex4ht-env.tex (
	tex4ht.env-unix,
	tex4ht.env-win32
	): use the -o option with Dvisvgm, to prevent insertion of spurious
	text, produced by Dvisvgm, at the start of the generated SVG file.

2023-12-05  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex (
	tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/cm/cmtcsc.htf
	): require use of small caps monospaced font.

2023-12-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex (
	tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/cm/cmtcsc.htf
	): link to cmtt instead of using custom font table.
	Thanks to Arkady Benediktov

2023-12-03  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (xcolor.4ht): added the "color" option.
	https://tex.stackexchange.com/a/470290/2891

2023-11-21  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): use <mtext> instead of <mrow> in
	\Configure{qopname} to prevent rendering errors with MathJax.
	https://tex.stackexchange.com/a/701927/2891

2023-11-20  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (citation-style-language.4ht): added Citation Style
	Language support.
	https://github.com/zepinglee/citeproc-lua/issues/40

2023-11-19  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-newtx.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/txsyc/ntxsyc.htf
	): fixed some Unicode characters, convert to images others that are
	not available in Unicode.
	Thanks to Arkady Benediktov

2023-11-17  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/latex/lasy.htf
	): updated lasy.htf and 
	Thanks to Arkady Benediktov

2023-11-12  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (array.4ht): write version.

2023-11-10  Michal Hoftich  <michal.h21@gmail.com>
