@@ -2,7 +2,7 @@
 %      latex tex4ht-env
 % or htlatex tex4ht-env "xhtml,3"
 %
-% Copyright 2009-2018 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -112,29 +112,32 @@ before validations.
 %%%%%%%%%%%%%%%%%%%
 
 \<unix opening comment\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% Notes:                                                            %
-%  1. Empty lines might be harmful                                  %
-%  2. Tagged script segments <tag>...</tag> are scanned only if     %
-%     their names are specified within -ctag switches of tex4ht.c   %
-%     and t4ht.c. When -c switches are not supplied, a -cdefault    %
-%     is implicitly assumed.                                        % 
-%        The tags <tag> and </tag>, but not their bodies, are       %
-%     ignored if they are not located at the start of their lines.  %
-%  3. Place this file in your work directory and/or root directory  %
-%     and/or in directory `xxx' of your choice. In the latest case, %
-%     compile tex4ht.c and t4ht.c with `#define ENVFILE xxx', or    %
-%     provide the address of the file to tex4ht and t4ht throught   %
-%     the -e switch                                                 %
-%  4. Under kpathsea, the substring `%%~' may be employed in        %
-%     commands to obtain the value of ${TEXMFDIST}.                 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+%
+% Notes:
+% 1. Empty lines might be harmful.
+%
+% 2. Tagged script segments <tag>...</tag> are scanned only if
+%    their names are specified within -ctag switches of tex4ht.c
+%    and t4ht.c. When -c switches are not supplied, a -cdefault
+%    is implicitly assumed.
+%       The tags <tag> and </tag>, but not their bodies, are
+%    ignored if they are not located at the start of their lines.
+%
+% 3. Place this file in your work directory and/or root directory
+%    and/or in directory `xxx' of your choice. In the latest case,
+%    compile tex4ht.c and t4ht.c with `#define ENVFILE xxx', or
+%    provide the location of the file to tex4ht and t4ht with
+%    the -e switch.
+%
+% 4. Under kpathsea, the substring `%%~' may be employed in
+%    commands to obtain the value of ${TEXMFDIST}.
+%
 >>>
 
 
 \<win32 opening comment\><<<
-% See comments in the Unix tex4ht.env for how this file gets found,
-% except on Windows, we also look in the directory of tex4ht.exe/t4ht.exe.
+% See comments in the Unix tex4ht.env for how this file gets found --
+% except that on Windows, we also look in the directory of tex4ht.exe/t4ht.exe.
 >>>
 
 
@@ -1648,20 +1651,20 @@ Note: the permission option `S' takes into account also trailing spaces.
 \<unix copyright\><<<
 % tex4ht.env-unix (@version), generated from @jobname.tex
 % (can be used as ~/.tex4ht)
-% Copyright 2009-2018 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright @CopyYear.1997. Eitan M. Gurari
 @<TeX4ht copyright@>>>>
 
 \<private copyright\><<<
 % tex4ht.env (private) (@version), generated from @jobname.tex
 % (can be used as ~/.tex4ht)
-% Copyright 2009-2018 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright @CopyYear.1997. Eitan M. Gurari
 @<TeX4ht copyright@>>>>
 
 \<win32 copyright\><<<
 % tex4ht.env-win32 (@version), generated from @jobname.tex
-% Copyright 2009-2018 TeX Users Group
+% Copyright 2009-2023 TeX Users Group
 % Copyright @CopyYear.1997. Eitan M. Gurari
 @<TeX4ht copyright@>>>>
 
